feat(api,elpctl): support simulator backend when creating devices
